k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx

        image: frontend-nginx:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 5000
