k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
      - name: notification-service

        image: notification-service:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8084

        livenessProbe:
          httpGet:
            path: /health
            port: 8084

          initialDelaySeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8084

          initialDelaySeconds: 5
