k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
      - name: order-service

        image: order-service:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8081

        livenessProbe:
          httpGet:
            path: /health
            port: 8081

          initialDelaySeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8081

          initialDelaySeconds: 5
