k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
      - name: payment-service

        image: payment-service:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8083

        livenessProbe:
          httpGet:
            path: /health
            port: 8083

          initialDelaySeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8083

          initialDelaySeconds: 5
