k8s/profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: profile-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: profile-service

  template:
    metadata:
      labels:
        app: profile-service

    spec:
      containers:
      - name: profile-service

        image: profile-service:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8085

        livenessProbe:
          httpGet:
            path: /health
            port: 8085

          initialDelaySeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8085

          initialDelaySeconds: 5
