k8s/auth-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth-service

  ports:
  - port: 8080
    targetPort: 8080

  type: ClusterIP
