k8s/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification-service

spec:
  selector:
    app: notification-service

  ports:
  - port: 8084
    targetPort: 8084

  type: ClusterIP
