k8s/payment-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:
  selector:
    app: payment-service

  ports:
  - port: 8083
    targetPort: 8083

  type: ClusterIP
