k8s/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  selector:
    app: product-service

  ports:
  - port: 8082
    targetPort: 8082

  type: ClusterIP
