k8s/profile-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: profile-service

spec:
  selector:
    app: profile-service

  ports:
  - port: 8085
    targetPort: 8085

  type: ClusterIP
